--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -4,13 +4,14 @@ h3,
 h4,
 h5,
 h6,
-ul,
 p {
   margin: 0;
   padding: 0;
 }
 ul {
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
 img {
   display: block;
