--- a/scss/layouts/_portfolio.scss
+++ b/scss/layouts/_portfolio.scss
@@ -22,24 +22,24 @@
 }
 
 .card {
-  position: relative;
+  // position: relative;
 
-  overflow: hidden;
+  // overflow: hidden;
 
-  &::before {
-    position: absolute;
-    display: inline-block;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(33, 150, 243, 0.9);
-    opacity: 0;
-    transform: translateY(100%);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+  // &::before {
+  //   position: absolute;
+  //   display: inline-block;
+  //   content: "";
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   background-color: rgba(33, 150, 243, 0.9);
+  //   opacity: 0;
+  //   transform: translateY(100%);
+  //   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  //     transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  // }
 }
 
 .card__descript {
